--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,9 @@
     <string name="female">Female</string>
     <string name="personal_data_error">all data must be entered</string>
     <string name="finish">Finish</string>
+    <!-- My Profile -->
+    <string name="my_profile">My Profile</string>
+    <string name="start_weight">Start Weight</string>
+    <string name="start_height">Start Height</string>
 
 </resources>
