--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,31 @@
     <string name="female">Female</string>
     <string name="personal_data_error">all data must be entered</string>
     <string name="finish">Finish</string>
+    <!-- Dashboard-->
+    <string name="calorie">Calorie In Check!</string>
+    <string name="addfood">Add Food</string>
+    <string name="meals">Your Meals</string>
+    <string name="hw">Height and Weight</string>
+    <string name="berat">Enter your weight</string>
+    <string name="tinggi">Enter your Height</string>
+    <string name="submit">Submit</string>
+    <string name="angkacalorie">0/1232 Cal</string>
+    <string name="water">Water Challenge</string>
+    <string name="search">Search</string>
+    <string name="home">Home</string>
+    <string name="profile">Profile</string>
+    <string name="angkautama">/1232</string>
+    <string name="cal">Cal</string>
+    <string name="left">Left</string>
+    <string name="protein">Protein</string>
+    <string name="angkaprotein">/55 g</string>
+    <string name="fat">Fat</string>
+    <string name="angkaprofat">/55 g</string>
+    <string name="carbs">Carbs</string>
+    <string name="angkacarbs">/55 g</string>
+    <string name="fiber">Fiber</string>
+    <string name="angkafiber">/55 g</string>
+    <string name="today">Today</string>
+    <string name="nol">0</string>
 
 </resources>
