--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,19 +34,19 @@
     <string name="addfood">Add Food</string>
     <string name="meals">Your Meals</string>
     <string name="hw">Height and Weight</string>
-    <string name="berat">Enter your weight</string>
-    <string name="tinggi">Enter your Height</string>
+    <string name="berat">Enter your weight (kg)</string>
+    <string name="tinggi">Enter your Height (cm)</string>
     <string name="submit">Submit</string>
-    <string name="angkacalorie">0/1232 Cal</string>
+    <string name="angkacalorie">1000/1232 cals</string>
     <string name="water">Water Challenge</string>
     <string name="search">Search</string>
     <string name="home">Home</string>
     <string name="profile">Profile</string>
-    <string name="angkautama">0/1232</string>
+    <string name="angkautama">1000/1232\ncals</string>
     <string name="cal">Cal</string>
     <string name="left">Left</string>
     <string name="protein">Protein</string>
-    <string name="angkaprotein">0/55 g</string>
+    <string name="angkaprotein">25/55 g</string>
     <string name="fat">Fat</string>
     <string name="angkaprofat">0/55 g</string>
     <string name="carbs">Carbs</string>
