--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="personal_data">Personal Data</string>
     <string name="name">Name</string>
     <string name="birthdate">Birth Date</string>
+    <string name="age">Age</string>
     <string name="weight">Weight</string>
     <string name="weight_kg">Weight (kg)</string>
     <string name="height">Height</string>
@@ -33,10 +34,11 @@
     <string name="my_profile">My Profile</string>
     <string name="start_weight">Start\nWeight</string>
     <string name="start_height">Start\nHeight</string>
+    <string name="save_changes">Save Changes</string>
     <!-- Add food -->
     <string name="back_button_desc">Back</string>
     <string name="food_name">Banana</string>
-    <string name="food_calories">93 Cals</string>
+    <string name="food_calories">93 Cals / 100 g</string>
     <string name="food_amount_hint">100</string>
     <string name="food_unit">g</string>
     <string name="nutritional_facts_label">Nutritional facts 🍏</string>
@@ -72,7 +74,7 @@
     <string name="angkautama">1000/1232\ncals</string>
     <string name="cal">Cal</string>
     <string name="left">Left</string>
-    <string name="protein">Protein</string>
+    <string name="protein">Proteins</string>
     <string name="angkaprotein">25/55 g</string>
     <string name="fat">Fat</string>
     <string name="angkaprofat">0/55 g</string>
