--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="dont_have_account">Dont\'t have an account?</string>
     <string name="create_account">Create an account</string>
     <string name="login_error">email or password is wrong</string>
+    <string name="login_validation_error">all data must be filled using valid data</string>
     <!-- Sign up -->
     <string name="signup_big">Sign Up</string>
     <string name="signup_small">Sign up</string>
@@ -28,13 +29,15 @@
     <string name="gender">Gender</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
-    <string name="personal_data_error">all data must be entered</string>
+    <string name="personal_data_error">all data must be filled using valid data</string>
+    <string name="email_exists_error">email already exists</string>
     <string name="finish">Finish</string>
     <!-- My Profile -->
     <string name="my_profile">My Profile</string>
     <string name="start_weight">Start\nWeight</string>
     <string name="start_height">Start\nHeight</string>
     <string name="save_changes">Save Changes</string>
+    <string name="logout">Log Out</string>
     <!-- Add food -->
     <string name="back_button_desc">Back</string>
     <string name="food_name">Banana</string>
@@ -82,7 +85,7 @@
     <string name="angkacarbs">0/55 g</string>
     <string name="fiber">Fiber</string>
     <string name="angkafiber">0/55 g</string>
-    <string name="today">Today</string>
+    <string name="today">TODAY</string>
     <string name="nol">0</string>
 
 </resources>
